add 2 stat handles
